--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -43,59 +43,62 @@
       </div><!--/.container-fluid -->
     </nav>
     <!-- Main component for a primary marketing message or call to action -->
-        <div class="jumbotron transparent">
-          <h1>iBursa</h1>
-          <h2>List of Students. Session: Fall 2015</h2>
-            <div class="StudentTable">
-              <table>
-                <tr>
-                  <td>No</td>
-                  <td>Surname</td>
-                  <td>Name</td>
-                  <td>Address</td>
-                  <td>Skype</td>
-                </tr>
-                <tr>
-                  <td><a href="student_detail.html">1</a></td>
-                  <td>Неплюев</td>
-                  <td>Вениамин</td>
-                  <td>nepluy.v.kolodez@mail.ru</td>
-                  <td>wtf</td>
-                </tr>
-                <tr>
-                  <td>2</td>
-                  <td>Гребницкий</td>
-                  <td>Ефим</td>
-                  <td>nafiga.mne@email.com</td>
-                  <td>grebi.otsuda</td>
-                </tr>
-                <tr>
-                  <td>3</td>
-                  <td>Безбородко</td>
-                  <td>Марья</td>
-                  <td>maria.krasa@dlinnaja.kosa.ru</td>
-                  <td>funny.girl</td>
-                </tr>
-                <tr>
-                  <td>4</td>
-                  <td>Ляпишева</td>
-                  <td>Юлиана</td>
-                  <td>blin@komom.iz</td>
-                  <td>yulia.lapi</td>
-                </tr>
-                <tr>
-                  <td>5</td>
-                  <td>Патрикеев</td>
-                  <td>Липат</td>
-                  <td>ya.iz@kazahstana.kz</td>
-                  <td>kumys.is.the.milk</td>
-                </tr>
-              </table>
-            </div>
+    <div class="jumbotron transparent">
+      <h1>iBursa</h1>
+      <h2>List of Students<br>
+      Session: Fall 2015</h2>
+      <div class="StudentTable">
+        <table class="table-hover">
+          <tr>
+            <td>No</td>
+            <td>Surname</td>
+            <td>Name</td>
+            <td>Address</td>
+            <td>Skype</td>
+          </tr>
+          <tr>
+            <td>
+              <a href="student_detail.html">1</a>
+            </td>
+            <td>Неплюев</td>
+            <td>Вениамин</td>
+            <td>г. Тюлячи, ул. Байдукова, дом 96, квартира 290</td>
+            <td>nepluy.v.kolodez</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Гребницкий</td>
+            <td>Ефим</td>
+            <td>г. Мухосрань, ул. Барклая, дом 97, квартира 122</td>
+            <td>grebi.otsuda</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Безбородко</td>
+            <td>Марья</td>
+            <td>г. Бобруйск, ул. Вагжанова, дом 66</td>
+            <td>maria.krasa.dlinnaya.kosa</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Ляпишева</td>
+            <td>Юлиана</td>
+            <td>пгт. Тьмутаракань, ул. Мышиная, дом 1</td>
+            <td>blin.komom</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>Патрикеев</td>
+            <td>Липат</td>
+            <td>г. В.Бурлук, ул. Красных Партизанов, дом 6</td>
+            <td>kto.zdes</td>
+          </tr>
+        </table>
+      </div>
     </div>
   </div><!-- /container -->
   <!-- Button trigger modal -->
-   <button class="btn btn-primary btn-lg center-block" data-target="#myModal"
+  <button class="btn btn-primary btn-lg center-block" data-target="#myModal"
   data-toggle="modal" type="button">Launch demo modal</button> <!-- Modal -->
   <div aria-labelledby="myModalLabel" class="modal fade" id="myModal" role=
   "dialog" tabindex="-1">
