fix students-list title

--- a/templates/student-list.html
+++ b/templates/student-list.html
@@ -10,7 +10,7 @@
 			<meta http-equiv="X-UA-Compatible" content="IE=edge">
 			<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
-		<title>Students</title>
+		<title>list of students</title>
 
 		<link rel="stylesheet" href="../static/css/bootstrap.min.css">
 		<link rel="stylesheet" href="../static/css/ionicons.min.css">
@@ -79,7 +79,7 @@
 	<section class="price-table">
 		<div class="container section-wrapper">
 			<h2 class="section-title black">
-				PyBursa students table
+				PyBursa Students table
 			</h2> <!-- /.section-title -->
 			<p class="section-title black">Mart-April 2015</p>
 			<div class="panel panel-default">
