added all KZ2, formatted

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,9 +25,9 @@
                 "collapse" type="button"><span class="sr-only">Toggle
                 navigation</span> <span class="icon-bar"></span> <span class=
                 "icon-bar"></span> <span class="icon-bar"></span></button>
-                <a class="navbar-brand" href="index.html">Main</a>
-                <a class="navbar-brand" href="contact.html">Contacts</a>
-                <a class="navbar-brand" href="student_list.html">Students</a>
+                <a class="navbar-brand" href="index.html">Main</a> <a class=
+                "navbar-brand" href="contact.html">Contacts</a> <a class=
+                "navbar-brand" href="student_list.html">Students</a>
             </div>
         </div>
     </nav>
