--- a/templates/index.html
+++ b/templates/index.html
@@ -91,9 +91,9 @@
             </div>
         </div>
         <div class="media">
-            <!--<iframe allowfullscreen="true" frameborder="0" height="350" src=
+            <iframe allowfullscreen="true" frameborder="0" height="350" src=
             "http://coub.com/embed/acw5gmi?muted=false&autostart=true&originalSize=false&hideTopBar=true&startWithHD=true"
-            width="320"></iframe>-->
+            width="320"></iframe>
         </div>
     </div>
     <div class="container" role="main">
