--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -20,87 +20,102 @@
                 "collapse" type="button"><span class="sr-only">Toggle
                 navigation</span> <span class="icon-bar"></span> <span class=
                 "icon-bar"></span> <span class="icon-bar"></span></button>
-                <a class="navbar-brand" href="index.html">Main</a> 
-                <a class="navbar-brand" href="contact.html">Contacts</a>
-                <a class="navbar-brand" href="student_list.html">Students</a>
+                <a class="navbar-brand" href="index.html">Main</a> <a class=
+                "navbar-brand" href="contact.html">Contacts</a> <a class=
+                "navbar-brand" href="student_list.html">Students</a>
             </div>
         </div>
     </nav>
     <div class="jumbotron">
         <div class="container">
             <h2>Narendra Modi</h2>
-            <h6>group started Nov 19, 2015</h6>
         </div>
-
-    <div class="container" role="main">
-        <h2>Program</h2>
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <div class="table-responsive">
-            <table class="table table-striped" width="10">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                <tbody>
-                    <tr>
-                        <td>Surname</td>
-                        <td>Narendra</td>
-                    </tr>
-                    <tr>
-                        <td>Name</td>
-                        <td>Modi</td>
-                    </tr>
-                    <tr>
-                        <td>Patronymic</td>
-                        <td>Damodardas</td>
-                    </tr>
-                    <tr>
-                        <td>Birth Date</td>
-                        <td>17/09/1950</td>
-                    </tr>
-                    <tr>
-                        <td>Address</td>
-                        <td>2820 Church Street Atwater, CA 95301</td>
-                    </tr>
-                    <tr>
-                        <td>E-mail</td>
-                        <td><a href="mailto:narendra_modi@pybursa.com" target="_top">narendra_modi@pybursa.com</a></td>
-                        
-                    </tr>
-                    <tr>
-                        <td>Skype</td>
-                        <td>narendra_modi</td>
-                    </tr>
-                    </tbody>
-            </table>
+        <div class="container" role="main">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="container" role="main">
+                        <div class="table-responsive">
+                            <table class="table table-striped" width="10">
+                                <tbody>
+                                    <tr>
+                                        <td>Surname</td>
+                                        <td>Narendra</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Name</td>
+                                        <td>Modi</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Patronymic</td>
+                                        <td>Damodardas</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Birth Date</td>
+                                        <td>17/09/1950</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Address</td>
+                                        <td>2820 Church Street Atwater, CA
+                                        95301</td>
+                                    </tr>
+                                    <tr>
+                                        <td>E-mail</td>
+                                        <td>
+                                            <a href=
+                                            "mailto:narendra_modi@pybursa.com"
+                                            target=
+                                            "_top">narendra_modi@pybursa.com</a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Skype</td>
+                                        <td>narendra_modi</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="container" role="main">
+                        <table class="table table-striped" width="10">
+                            <tbody>
+                                <tr>
+                                    <th>Week</th>
+                                    <th>Control type</th>
+                                    <th>Grade</th>
+                                </tr>
+                                <tr>
+                                    <td rowspan="3">week 1</td>
+                                    <td>Tests</td>
+                                    <td>100500%</td>
+                                </tr>
+                                <tr>
+                                    <td>Problem task 1</td>
+                                    <td>100500%</td>
+                                </tr>
+                                <tr>
+                                    <td>Problem task 2</td>
+                                    <td>100500%</td>
+                                </tr>
+                                <tr>
+                                    <td rowspan="3">week 2</td>
+                                    <td>Tests</td>
+                                    <td>100500%</td>
+                                </tr>
+                                <tr>
+                                    <td>Problem task 1</td>
+                                    <td>100500%</td>
+                                </tr>
+                                <tr>
+                                    <td>Problem task 2</td>
+                                    <td>100500%</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src=
