Task 2. First try

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -131,12 +131,16 @@
 }
 
 .StudentTable tr:first-child td {
-	background:-o-linear-gradient(bottom, #cccccc 5%, #b2b2b2 100%);
+	/*background:-o-linear-gradient(bottom, #cccccc 5%, #b2b2b2 100%);
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #cccccc), color-stop(1, #b2b2b2) );
-	background:-moz-linear-gradient( center top, #cccccc 5%, #b2b2b2 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#cccccc", endColorstr="#b2b2b2");	background: -o-linear-gradient(top,#cccccc,b2b2b2);
+	background:-moz-linear-gradient( center top, #cccccc 5%, #b2b2b2 100% );*/
+	background-color: #b2b2b2;
 
-	background-color:#cccccc;
+
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#cccccc", endColorstr="#b2b2b2");
+	/*background: -o-linear-gradient(top,#cccccc,b2b2b2);*/
+
+	/*background-color:#cccccc;*/
 	border:0px solid #000000;
 	text-align:center;
 	border-width:0px 0px 1px 1px;
@@ -147,11 +151,11 @@
 }
 
 .StudentTable tr:first-child:hover td {
-	background:-o-linear-gradient(bottom, #cccccc 5%, #b2b2b2 100%);
+	/*background:-o-linear-gradient(bottom, #cccccc 5%, #b2b2b2 100%);
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #cccccc), color-stop(1, #b2b2b2) );
 	background:-moz-linear-gradient( center top, #cccccc 5%, #b2b2b2 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#cccccc", endColorstr="#b2b2b2");	background: -o-linear-gradient(top,#cccccc,b2b2b2);
-	background-color:#cccccc;
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#cccccc", endColorstr="#b2b2b2");	background: -o-linear-gradient(top,#cccccc,b2b2b2);*/
+	background-color:#b2b2b2;
 }
 
 .StudentTable tr:first-child td:first-child {
