--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -109,7 +109,7 @@
         <div class="modal-body">
 
       <div class="StudentTable">
-        <table class="table-hover">
+        <table>
           <tr>
             <td>Course</td>
             <td>Week</td>
