--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -28,7 +28,7 @@
         </div>
       </div>
     </nav>
-    
+
 		<div class="container">
 			<h1>Guido van Rossum</h1>
 			<img src="../static/images/founder.jpg" class="img-circle">
@@ -87,24 +87,24 @@
         	<tr>
 						<td rowspan="6">Python basics</td>
 						<td rowspan="3">Week 1</td>
-						<td>Tests - loop instructions</td>
+						<td>Tests</td>
 						<td class="success">96%</td>
 					</tr>
 					<tr>
-						<td>Problem task 1 - reversed string</td>
+						<td>Problem Task.</td>
 						<td class="success">100%</td>
 					</tr>
 					<tr>
-						<td>Problem task 2 - magic</td>
+						<td>Problem Task.</td>
 						<td class="warning">78%</td>
 					</tr>
 					<tr>
 						<td rowspan=2>Week2</td>
-						<td>Tests - Django unchained</td>
+						<td>Tests</td>
 						<td class="info">80%</td>
 					</tr>
 					<tr>
-						<td>Problem task 3 - more black magic with Django</td>
+						<td>Problem Task.</td>
 						<td class="danger">30%</td>
 					</tr>
         </tbody>
