--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -30,7 +30,7 @@
 
     <div class="container theme-showcase" role="main">
     	<div class="container">
-    		<h1>Студенты курса PyBursa</h1>
+    		<h1>Студенты курса <span class="label label-default">PyBursa</span></h1>
     		<p>Ниже представлен список студентов, выпуск декабрь 2015</p>
     	</div>
     	<div class="container">
