Task 2. First try

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -5,7 +5,7 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>iBursa students</title><!-- Bootstrap -->
+  <title>iBursa Неплюев В.</title><!-- Bootstrap -->
   <link href="../static/css/bootstrap.css" rel="stylesheet">
   <link href="../static/css/style.css" rel="stylesheet">
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -47,7 +47,7 @@
     </nav>
     <!-- Main component for a primary marketing message or call to action -->
     <div class="jumbotron">
-      <h2>Неплюев Вениамин</h2>
+      <h2 class="director">Неплюев Вениамин</h2>
       <img class="img-rounded" src="../static/images/nepluev.jpg" height="100" alt="Nepluev V."><br><br>
       <div class="StudentTable">
         <table class="table-hover">
@@ -64,18 +64,18 @@
             <td>Вениамин</td>
           </tr>
           <tr>
-            <td>Patronimyc</td>
+            <td>Patronymic</td>
             <td>Альбертович</td>
           </tr>
           <tr>
-            <td>Birth date</td>
+            <td>Birth Date</td>
             <td>Feb.19, 1976</td>
           </tr>
           <tr>
             <td>Address</td>
             <td>г. Тюлячи, ул. Байдукова, дом 96, квартира 290</td>
           <tr>
-            <td>e-mail</td>
+            <td>E-mail</td>
             <td>nepluy.v.kolodez@mail.ru</td>
           </tr>
           <tr>
@@ -83,7 +83,7 @@
             <td>nepluy.v.kolodez</td>
           </tr>
           <tr>
-            <td>Average grade</td>
+            <td>Average Grade</td>
             <td>85%</td>
           </tr>
           <tr>
@@ -127,7 +127,7 @@
             <td>85%</td>
           </tr>
           <tr>
-            <td>Problem task #2</td>
+            <td>Problem Task #2</td>
             <td>100%</td>
           </tr>
           <tr>
