--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 .transparent {
-	opacity: 0.7;
+	opacity: 0.75;
 }
 
 .back {
@@ -70,7 +70,7 @@
 	box-shadow: 10px 10px 5px #888888;
 	border:1px solid #000000;
 	
-	-moz-border-radius-bottomleft:0px;
+	/*-moz-border-radius-bottomleft:0px;
 	-webkit-border-bottom-left-radius:0px;
 	border-bottom-left-radius:0px;
 	
@@ -84,7 +84,7 @@
 	
 	-moz-border-radius-topleft:0px;
 	-webkit-border-top-left-radius:0px;
-	border-top-left-radius:0px;
+	border-top-left-radius:0px;*/
 }
 
 .StudentTable table{
@@ -137,8 +137,8 @@
 	background-color: #b2b2b2;
 
 
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#cccccc", endColorstr="#b2b2b2");
-	/*background: -o-linear-gradient(top,#cccccc,b2b2b2);*/
+	/*filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#cccccc", endColorstr="#b2b2b2");
+	background: -o-linear-gradient(top,#cccccc,b2b2b2);*/
 
 	/*background-color:#cccccc;*/
 	border:0px solid #000000;
