Updated style.css, student_list.html, student_detail.html files

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -59,12 +59,10 @@
 
       </div>
 
-    <div class="panel panel-default">
-      <!-- Default panel contents -->
-      <div class="panel-heading">Student Details</div>
+
 
       <!-- Table -->
-      <table class="table">
+      <table class="table table-bordered">
       <tbody>
       <tr>
       <td>Surname</td>
@@ -104,8 +102,37 @@
       </tr>
       </tbody>
       </table>
-    </div>
 
+    <div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Information about tests and practical lessons execution</div>
+
+      <!-- Table -->
+      <table class="table table-striped table-bordered">
+      <thead>
+      <tr>
+      <th>Theme</th>
+      <th>Week Number</th>
+      <th>Control Type</th>
+      <th>Problem Task Number</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+      <td>Python for Beginners</td>
+      <td>1</td>
+      <td>Practice Lesson</td>
+      <td>Problem Task #2</td>
+      </tr>
+      <tr>
+      <td>Handling Exceptions</td>
+      <td>2</td>
+      <td>Tests</td>
+      <td>Problem Task #1</td>
+      </tr>
+      </tbody>
+      </table>
+    </div>
 
       <footer>
         <p>© Company 2015</p>
