--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -64,7 +64,7 @@
       <div class="panel-heading">Students List</div>
 
       <!-- Table -->
-      <table class="table">
+      <table class="table table-striped table-bordered">
       <thead>
       <tr>
       <th>No</th>
