added all KZ2, fix1

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -50,6 +50,14 @@
                                         <td>Damodardas</td>
                                     </tr>
                                     <tr>
+                                        <td>Rating</td>
+                                        <td>21</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Average Grade</td>
+                                        <td>100</td>
+                                    </tr>
+                                    <tr>
                                         <td>Birth Date</td>
                                         <td>17/09/1950</td>
                                     </tr>
@@ -91,11 +99,11 @@
                                     <td>100500%</td>
                                 </tr>
                                 <tr>
-                                    <td>Problem task 1</td>
+                                    <td>Problem Task 1</td>
                                     <td>100500%</td>
                                 </tr>
                                 <tr>
-                                    <td>Problem task 2</td>
+                                    <td>Problem Task 2</td>
                                     <td>100500%</td>
                                 </tr>
                                 <tr>
@@ -104,11 +112,11 @@
                                     <td>100500%</td>
                                 </tr>
                                 <tr>
-                                    <td>Problem task 1</td>
+                                    <td>Problem Task 1</td>
                                     <td>100500%</td>
                                 </tr>
                                 <tr>
-                                    <td>Problem task 2</td>
+                                    <td>Problem Task 2</td>
                                     <td>100500%</td>
                                 </tr>
                             </tbody>
