Task 2. First try

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -47,7 +47,7 @@
     </nav>
     <!-- Main component for a primary marketing message or call to action -->
     <div class="jumbotron">
-      <h2 class="director">Неплюев Вениамин</h2>
+      <span class="blue"><h2 class="director">Неплюев Вениамин</h2>.</span>
       <img class="img-rounded" src="../static/images/nepluev.jpg" height="100" alt="Nepluev V."><br><br>
       <div class="StudentTable">
         <table class="table-hover">
