--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -16,10 +16,9 @@
 		<link rel="stylesheet" href="../static/css/ionicons.min.css">
 		<link rel="stylesheet" href="../static/css/owl.carousel.css">
 		<link rel="stylesheet" href="../static/css/owl.theme.css">
-	    <link rel="stylesheet" href="../static/css/main.css">
 	    <link rel="stylesheet" href="../static/css/section.css">
 	    <link rel="stylesheet" href="../static/css/service.css">
-	    <link rel="stylesheet" href="../static/css/syle.css">
+	    <link rel="stylesheet" href="../static/css/style.css">
 
 	    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 			<!--[if lt IE 9]>
