Task 2. First try #3

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -47,13 +47,13 @@
     </nav>
     <!-- Main component for a primary marketing message or call to action -->
     <div class="jumbotron">
-      <span class="blue"><h2 class="director">Неплюев Вениамин</h2>.</span>
+      <h2 class="director">Неплюев Вениамин</h2>
       <img class="img-rounded" src="../static/images/nepluev.jpg" height="100" alt="Nepluev V."><br><br>
       <div class="StudentTable">
         <table class="table-hover">
           <tr>
-            <td>Parameter</td>
-            <td>Description</td>
+            <td><span class="blue">Parameter</span></td>
+            <td><span class="blue">Description</span></td>
           </tr>
           <tr>
             <td>Surname</td>
