Task 2. First try #3

--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -46,7 +46,7 @@
     <div class="jumbotron transparent">
       <h1>iBursa</h1>
       <h2>List of Students<br>
-      Session: Fall 2015</h2>
+      <span class="under">Session: Fall 2015</span></h2>
       <div class="StudentTable">
         <table class="table-hover">
           <tr>
