Task 2. First try #4

--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -45,8 +45,8 @@
     <!-- Main component for a primary marketing message or call to action -->
     <div class="jumbotron transparent">
       <h1>iBursa</h1>
-      <h2>List of Students<br>
-      <span class="under">Session: Fall 2015</span></h2>
+      <h2 class="bold">List of Students<br>
+      Session: Fall 2015</h2>
       <div class="StudentTable">
         <table class="table-hover">
           <tr>
@@ -97,29 +97,6 @@
       </div>
     </div>
   </div><!-- /container -->
-  <!-- Button trigger modal -->
-  <button class="btn btn-primary btn-lg center-block" data-target="#myModal"
-  data-toggle="modal" type="button">Launch demo modal</button> <!-- Modal -->
-  <div aria-labelledby="myModalLabel" class="modal fade" id="myModal" role=
-  "dialog" tabindex="-1">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button aria-label="Close" class="close" data-dismiss="modal" type=
-          "button"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button class="btn btn-default" data-dismiss="modal" type=
-          "button">Close</button> <button class="btn btn-primary" type=
-          "button">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src=
   "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
   </script> 
