--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -54,7 +54,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="index.html">Main</a></li>
 						<li><a href="contact.html">Contacts</a></li>
-						<li class="active"><a href="student-list.html">Students</a></li>
+						<li class="active"><a href="student_list.html">Students</a></li>
 
 					</ul> <!-- /.nav -->
 			    </div><!-- /.navbar-collapse -->
