--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,8 @@
 		<link rel="stylesheet" href="../static/css/ionicons.min.css">
 		<link rel="stylesheet" href="../static/css/owl.carousel.css">
 		<link rel="stylesheet" href="../static/css/owl.theme.css">
-	    <link rel="stylesheet" href="../static/css/main.css">
 	    <link rel="stylesheet" href="../static/css/one-page.css">
-	    <link rel="stylesheet" href="../static/css/syle.css">
+	    <link rel="stylesheet" href="../static/css/style.css">
 
 	    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 			<!--[if lt IE 9]>
@@ -54,7 +53,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li class="active"><a href="index.html">Main</a></li>
 						<li><a href="contact.html">Contacts</a></li>
-						<li><a href="student-list.html">Students</a></li>
+						<li><a href="student_list.html">Students</a></li>
 					</ul> <!-- /.nav -->
 			    </div><!-- /.navbar-collapse -->
 		  	</div><!-- /.container -->
