modifed old pages

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -41,7 +41,8 @@
                 <ul class="nav masthead-nav">
 
                   <li><a href="index.html">Home</a></li>
-                  <li class="active"><a href="#">Contacts</a></li>
+                  <li class = "active"><a href="contact.html#">Contacts</a></li>
+                  <li><a href="student_list.html">Students</a></li>
                 </ul>
               </nav>
             </div>
