--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Main</a></li>
             <li><a href="contact.html">Contacts</a></li>
+            <li><a href="student_list.html">Students</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -78,8 +79,43 @@
                         </tr>
                         <tr>
                             <td>03 </td>
-                            <td>Ôóíêöèè è ìîäóëüíîñòü </td>
-                            <td>ôóíêöèè (def, lambda) ãåíåðàòîðû ñïèñêîâ ìîäóëè, ñòðóêòóðà </td>
+                            <td>Функции и модульность </td>
+                            <td>функции (def, lambda),генераторы списков,модули, структура </td>
+                        </tr>
+                        <tr>
+                            <td>04 </td>
+                            <td>Библиотеки и пакетный менеджер </td>
+                            <td>встроенные библиотеки http://docs.python.org/,сторонние библиотеки (менеджер пакетов) PYPI,PYTHONPATH и виртуальное окружение </td>
+                        </tr>
+                        <tr>
+                            <td>05 </td>
+                            <td>Классы и ООП, основы </td>
+                            <td>синтаксис, атрибуты, методы, инстанцирование,все объект, служебные методы </td>
+                        </tr>
+                        <tr>
+                            <td>06 </td>
+                            <td>Классы и ООП, возможности Python </td>
+                            <td>инкапсуляция, наследование, полиморфизм,переопределение методов,super,абстрактные классы,статические методы </td>
+                        </tr>
+                        <tr>
+                            <td>07 </td>
+                            <td>Работа с файлами </td>
+                            <td>запись и чтение файлов,методы объектов-файлов,csv, json </td>
+                        </tr>
+                        <tr>
+                            <td>08 </td>
+                            <td>Работа с датами </td>
+                            <td>модуль datetime </td>
+                        </tr>
+                        <tr>
+                            <td>09 </td>
+                            <td>Основы html/css </td>
+                            <td>html - теги и свойства,css - свойства и селекторы,каскадное переопределение свойств </td>
+                        </tr>
+                        <tr>
+                            <td>10 </td>
+                            <td>Основы JavaScript </td>
+                            <td>Зачем разработчику backend нужно знать js?,DOM,JS, jQuery, Ajax </td>
                         </tr>
                     </tbody>
                 </table>
