--- a/templates/contact.html
+++ b/templates/contact.html
@@ -39,8 +39,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Main</a></li>
-            <li class="active"><a href="contact.html">Contacts</a></li>
+            <li class="active"><a href="index.html">Main</a></li>
+            <li><a href="contact.html">Contacts</a></li>
+            <li><a href="student_list.html">Students</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -54,66 +55,47 @@
         <div class="row">
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="../static/images/director.jpg" alt="image">
+                    <img src="../static/images/pasha.jpg" width="150" height="150" alt="image">
                     <div class="caption">
-                        <h3 class="blue">Director</h3>
+                        <h3 class="blue">Основатель ItBursa</h3>
                         <ul>
-                            <li>Name: <span class="red">Director</span></li>
-                            <li>Skype: <span class="green">Director.111</span></li>
-                            <li>Email: <span class="orange">example@gmail.com</span></li>
-                            <li>Phone: <span class="purple">0630000000</span></li>
+                            <li>Name: <span class="red">Павел Обод</span></li>
+                            <li>Skype: <span class="green">azaless</span></li>
+                            <li>Email: <span class="orange">itbursa100@gmail.com</span></li>
+                            <li>Phone: <span class="purple">+380637023703</span></li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="../static/images/manager.jpg" alt="image">
+                    <img src="../static/images/darka.jpg" width="150" height="150" alt="image">
                     <div class="caption">
-                        <h3 class="blue">Manager</h3>
+                        <h3 class="blue">Менеджер ItBursa</h3>
                         <ul>
-                            <li>Name: <span class="red">Manager</span></li>
-                            <li>Skype: <span class="green">Manager.111</span></li>
-                            <li>Email: <span class="orange">example@gmail.com</span></li>
-                            <li>Phone: <span class="purple">0630000000</span></li>
+                            <li>Name: <span class="red">Дария Михалевич</span></li>
+                            <li>Skype: <span class="green"> darka.darka.darka.darka.</span></li>
+                            <li>Email: <span class="orange">daria.mykhalevych@gmail.com</span></li>
+                            <li>Phone: <span class="purple">+380964691557</span></li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <img src="../static/images/founder.jpg" alt="image">
+                    <img src="../static/images/alena.jpg" width="150" height="150" alt="image">
                     <div class="caption">
-                        <h3 class="blue">Founder</h3>
+                        <h3 class="blue">Администратор курсов</h3>
                         <ul>
-                            <li>Name: <span class="red">Founder</span></li>
-                            <li>Skype: <span class="green">Founder.111</span></li>
-                            <li>Email: <span class="orange">example@gmail.com</span></li>
-                            <li>Phone: <span class="purple">0630000000</span></li>
+                            <li>Name: <span class="red">Алена Чайка</span></li>
+                            <li>Skype: <span class="green">alena.itbursa</span></li>
+                            <li>Email: <span class="orange">alena.itbursa@gmail.com</span></li>
+                            <li>Phone: <span class="purple">+380636250755</span></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-<!--         <h2>Director</h2>
-        <p>Name:<span class="red">Pavel</span></p>
-        <p>Skype:<span class="green">Pavel</span></p>
-        <p>Email:<span class="blue">example@gmail.com</span></p>
-        <p>Phone:<span class="purple">0630000000</span></p>
-        <hr/>
-        <h2>Manager</h2>
-        <p>Name:<span class="orange">Daria</span></p>
-        <p>Skype:<span class="black">Daria</span></p>
-        <p>Email:<span class="lemon">example@gmail.com</span></p>
-        <p>Phone:<span class="dark-blue">0630000000</span></p>
-        <hr/>
-        <h2>Founder</h2>
-        <p>Name:<span class="ff">Noname</span></p>
-        <p>Skype:<span class="dark-orange">Noname</span></p>
-        <p>Email:<span class="blue">example@gmail.com</span></p>
-        <p>Phone:<span class="purple">0630000000</span></p> -->
-    </div>
-    </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
