--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -42,7 +42,7 @@
                 <ul class="nav masthead-nav">
                   <li><a href="index.html">Home</a></li>
                   <li><a href="contact.html">Contacts</a></li>
-                  <li class = "active"><a href="student_list.html#">Students</a></li>
+                  <li class = "active"><a href="student_list.html">Students</a></li>
                 </ul>
               </nav>
             </div>
