--- a/templates/contact.html
+++ b/templates/contact.html
@@ -41,7 +41,7 @@
                 <ul class="nav masthead-nav">
 
                   <li><a href="index.html">Home</a></li>
-                  <li class = "active"><a href="contact.html#">Contacts</a></li>
+                  <li class = "active"><a href="contact.html">Contacts</a></li>
                   <li><a href="student_list.html">Students</a></li>
                 </ul>
               </nav>
@@ -62,7 +62,7 @@
                 <p>skype: donMike</p>
                 <p>email: Mike.Corleone@good.fa</p>
                 <p>Phone: 1234567890</p>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-default" href="../static/images/oops.jpg" role="button">View details &raquo;</a></p>
               </div><!-- /.col-lg-4 -->
               <div class="col-lg-4">
                 <img class="img-circle" src="../static/images/manager.jpg" alt="Generic placeholder image" width="160" height="140">
@@ -71,7 +71,7 @@
                 <p>skype: TonyMontana</p>
                 <p>email: Tony.Montana@scar.fe</p>
                 <p>Phone: 764576</p>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-default" href="../static/images/oops.jpg" role="button">View details &raquo;</a></p>
               </div><!-- /.col-lg-4 -->
               <div class="col-lg-4">
                 <img class="img-circle" src="../static/images/director.png" alt="Generic placeholder image" width="160" height="140">
@@ -80,7 +80,7 @@
                 <p>skype: DonVito</p>
                 <p>email: Vittorio72@good.fa</p>
                 <p>Phone: go skype</p>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-default" href=../static/images/oops.jpg" role="button">View details &raquo;</a></p>
               </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
