--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>PyBursa Student List</title>
+    <title>PyBursa Student Details</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
