--- a/templates/contact.html
+++ b/templates/contact.html
@@ -80,7 +80,7 @@
                 <p>skype: DonVito</p>
                 <p>email: Vittorio72@good.fa</p>
                 <p>Phone: go skype</p>
-                <p><a class="btn btn-default" href=../static/images/oops.jpg" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-default" href="../static/images/oops.jpg" role="button">View details &raquo;</a></p>
               </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
