--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
               <img class="img-circle" src="../static/images/cover.jpg" align="left" width="160" height="140" alt = "Logo">
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="index.html#">Home</a></li>
+                  <li class="active"><a href="index.html">Home</a></li>
                   <li><a href="contact.html">Contacts</a></li>
                   <li><a href="student_list.html">Students</a></li>
                 </ul>
