--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -49,7 +49,7 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Студенты курса PyBursa</h1>
+          <h1><b>Студенты курса PyBursa</b></h1>
             <h2>Upd 15.11</h2>
             </div>
 
@@ -62,7 +62,7 @@
                 <th>Skype</th>
               </tr>
               <tr>
-              <th><a href="../templates/student_detail.html">1</a></th>
+              <th><a href="student_detail.html">1</a></th>
                 <td>Fontane</td>
                 <td>Johnny</td>
                 <td>USA,LA </td>
