--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,6 +17,7 @@
       <ul class="nav nav-tabs">
       <li role="presentation" ><a href="index.html">Main</a></li>
       <li role="presentation" class="active"><a href="contact.html">Contacts</a></li>
+	  <li role="presentation"><a href="student_list.html">Student List</a></li>
       </ul>
 	  
       <h1 class="dt">Contacts</h1>
@@ -42,15 +43,6 @@
 					   <span class="phone">Phone: 1111</span>
 	  </p>
       <p>Not finished - yes</p>
-	  	<p class="btn-group">Useless staff</p>
-	<p class="btn-toolbar">Useless staff</p>
-	<p class="dropdown-menu-left">Useless staff</p>
-	<p class="dropdown-header">Useless staff</p>
-	<p class="dropdown-backdrop">Useless staff</p>
-	<p class="collapse">Useless staff</p>
-	<p class="btn-sm">Useless staff</p>
-	<p class="tn-lg">Useless staff</p>
-	<p class="btn-link">Useless staff</p>
-	<p class="end">THE END</p>
+
     </div>
   </body>
