--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
       <ul class="nav nav-tabs">
       <li role="presentation" class="active"><a href="index.html">Main</a></li>
       <li role="presentation"><a href="contact.html">Contacts</a></li>
+	  <li role="presentation"><a href="student_list.html">Student List</a></li>
       </ul>
 	 <h2 class="dl">PyBursa</h2> 
 	<h1>Description</h1>
@@ -383,15 +384,7 @@
         </tbody>
       </table>
 	<p class="end">THE END</p>
-	<p class="btn-group">Useless staff</p>
-	<p class="btn-toolbar">Useless staff</p>
-	<p class="dropdown-menu-left">Useless staff</p>
-	<p class="dropdown-header">Useless staff</p>
-	<p class="dropdown-backdrop">Useless staff</p>
-	<p class="collapse">Useless staff</p>
-	<p class="btn-sm">Useless staff</p>
-	<p class="tn-lg">Useless staff</p>
-	<p class="btn-link">Useless staff</p>
+
 
 
     </div>
