--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,23 @@
+.black {
+  color: black;
+  margin: 20px;
+}
 .border {
   border: 1px  solid black;
+}
+.border2{
+  border: 2px  solid black;
+  width: 90%;
+}
+.border3{
+  border: 2px  solid black;
+  width: 50%;
+  background-color: yellow;
+}
+.border4{
+  border: 1px  solid black;
+  width: 80%;
+  background-color: gray;
 }
 .end {
   font-weight: bold;
@@ -12,6 +30,13 @@
   color: blue;
   border: 1px  solid black;
 }
+.column_name td {
+  font-weight: bold;
+  text-align: center;
+  color: blue;
+  border: 1px  solid black;
+}
+
 .first_column {
   width: 100px;
 }
