--- a/templates/contact.html
+++ b/templates/contact.html
@@ -40,7 +40,7 @@
               <nav>
                 <ul class="nav masthead-nav">
 
-                  <li><a href="index.html">Home</a></li>
+                  <li><a href="index.html">Main</a></li>
                   <li class = "active"><a href="contact.html">Contacts</a></li>
                   <li><a href="student_list.html">Students</a></li>
                 </ul>
