--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -40,7 +40,7 @@
               <img class="img-circle" src="../static/images/cover.jpg" align="left" width="160" height="140" alt = "Logo">
               <nav>
                 <ul class="nav masthead-nav">
-                  <li><a href="index.html">Home</a></li>
+                  <li><a href="index.html">Main</a></li>
                   <li><a href="contact.html">Contacts</a></li>
                   <li class = "active"><a href="student_list.html">Students</a></li>
                 </ul>
