--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -87,7 +87,7 @@
             <tr>
               <th>Problem Task</th>
               <th>Tests</th>
-              <th>Agerage Grade</th>
+              <th>Average Grade</th>
               <th>Rating</th>
             </tr>
             <tr>
