--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -83,7 +83,7 @@
                   </tr>
          </table>
 
-          <table class = "table_blur"
+          <table class = "table_blur">
             <tr>
               <th>Problem Task</th>
               <th>Tests</th>
