task2 + coorected names

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -20,7 +20,10 @@
       </ul>
 	<div class="black">
 	 <h1 class="dl">Лучший Студент</h1>
-	 <p>Он лучший</p>
+	 <p>Он лучший из всех Students</p>
+	 <div class="btn-group" role="group" aria-label="...">
+  <button type="button" class="btn btn-default"><a href="student_detail.html">Он лучший</a></button>
+</div>
 	 <h2>Student detail</h2>
 	  <table class="border3">
         <tbody>
@@ -98,7 +101,7 @@
          </tr>
 
 		</tbody>
-		<table>
+		</table>
 		<h2>Grades</h2>
 		 <table class="border4">
 		<tbody>
