--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -17,14 +17,15 @@
       <li role="presentation"><a href="index.html">Main</a></li>
       <li role="presentation"><a href="contact.html">Contacts</a></li>
 	  <li role="presentation" class="active"><a href="student_list.html">Student List</a></li>
+	  
       </ul>
-	 <h1 class="dl">Список студентов PyBursa</h2>
+	 <h1 class="dl">Список Students PyBursa</h2>
 	 <p>Список студентов по состоянию на 15.11.2015</p>
 	  <table class="border2">
         <tbody>
         <tr class="column_name">
            <td class="first_column">
-            №
+            No
           </td>
           <td>
             Surname
@@ -122,7 +123,7 @@
         </tr>
 
 		</tbody>
-		<table>
+		</table>
 		
 	
 	<p class="end">THE END</p>
