--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Students</title>
+	<title>Students Detail</title>
 	<link rel="stylesheet" href="../static/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/style.css">
 	<script src="../static/js/bootstrap.js"></script>
