task2 + corrected menu

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -16,7 +16,7 @@
       <ul class="nav nav-tabs">
       <li role="presentation"><a href="index.html">Main</a></li>
       <li role="presentation"><a href="contact.html">Contacts</a></li>
-	  <li role="presentation"><a href="student_list.html">Student List</a></li>
+	  <li role="presentation"><a href="student_list.html">Students</a></li>
       </ul>
 	<div class="black">
 	 <h1 class="dl">Лучший Студент</h1>
