--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -16,7 +16,7 @@
       <ul class="nav nav-tabs">
       <li role="presentation"><a href="index.html">Main</a></li>
       <li role="presentation"><a href="contact.html">Contacts</a></li>
-	  <li role="presentation" class="active"><a href="student_list.html">Student List</a></li>
+	  <li role="presentation" class="active"><a href="student_list.html">Students</a></li>
 	  
       </ul>
 	 <h1 class="dl">Список Students PyBursa</h2>
