--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,7 +17,7 @@
       <ul class="nav nav-tabs">
       <li role="presentation" ><a href="index.html">Main</a></li>
       <li role="presentation" class="active"><a href="contact.html">Contacts</a></li>
-	  <li role="presentation"><a href="student_list.html">Student List</a></li>
+	  <li role="presentation"><a href="student_list.html">Students</a></li>
       </ul>
 	  
       <h1 class="dt">Contacts</h1>
