--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
       <ul class="nav nav-tabs">
       <li role="presentation" class="active"><a href="index.html">Main</a></li>
       <li role="presentation"><a href="contact.html">Contacts</a></li>
-	  <li role="presentation"><a href="student_list.html">Student List</a></li>
+	  <li role="presentation"><a href="student_list.html">Students</a></li>
       </ul>
 	 <h2 class="dl">PyBursa</h2> 
 	<h1>Description</h1>
