--- a/templates/contact.html
+++ b/templates/contact.html
@@ -31,6 +31,7 @@
             <ul class="nav nav-pills">
               <li role="presentation"><a class="passive" href="index.html">Main</a></li>
               <li role="presentation" class="active"><a class="active" href="contact.html">Contacts</a></li>
+              <li role="presentation" class="passive"><a href="student_list.html">Students</a></li>
             </ul>
         </div>
       </nav>
