Added saite version 2.2

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -54,7 +54,7 @@
         <td>Cordell</td>
       </tr>
       <tr>
-        <td class="data">Birthd Date:</td>
+        <td class="data">Birth Date:</td>
         <td>06/08/1976</td>
       </tr>
       <tr>
