--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Contacts</title>
+    <title>Students</title>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
-
+    <!-- <link href="../static/css/style.css" rel="stylesheet"> -->
+    
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -36,53 +36,91 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="index.html">Main</a></li>
-        <li class="active"><a href="contact.html">Contacts</a></li>
+        <li><a href="contact.html" >Contacts</a></li>
         <li><a href="student_list.html" >Students</a></li>
 
-      
+        
         </li>
       </ul>
      
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-<div class="row">
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="../static/images/keanu.jpeg" alt="keanu">
-      <div class="caption">
-        <h3>Director</h3>
-        <h4>Name: Keanu Reaves"</h4>
-        <h4>Skype: KeanuReaves</h4>
-        <h4>Email: keanu@example.com</h4>
-        <h4>Phone: 999999999</h4>
-        </div>
-    </div>
-  </div>
-<div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="../static/images/clooney.jpeg" alt="clooney">
-      <div class="caption">
-        <h3>Manager</h3>
-        <h4>Name: George Klooney"</h4>
-        <h4>Skype: GeorgeClooney</h4>
-        <h4>Email: clooney@example.com</h4>
-        <h4>Phone: 8888888888</h4>
-      </div>
-  </div>
-</div>
-<div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="../static/images/pitt.jpeg" alt="pitt">
-      <div class="caption">
-        <h3>Founder</h3>
-        <h4>Name: Bred Pitt"</h4>
-        <h4>Skype: BredPitt</h4>
-        <h4>Email: pitt@example.com</h4>
-        <h4>Phone: 777777777</h4>
-      </div>
-    </div>
-</div>
+<h1>Vakulenko Olena</h1>
+<img src="../static/images/olena.jpg" alt="olena">
+  <table class="table">
+      <caption>Student's card</caption>
+        <tbody>
+        <tr>
+          <th scope="row">Surname</th>
+          <td>Vakulenko</td>
+        </tr>
+        <tr>
+          <th scope="row">Name</th>
+          <td>Olena</td>
+        </tr>
+        <tr>
+          <th scope="row">Patronymic</th>
+          <td>Sergiivna</td>
+        </tr>
+        <tr>
+          <th scope="row">Rating</th>
+          <td>1</td>
+        </tr>
+        <tr>
+          <th scope="row">Average Grade</th>
+          <td>100%</td>
+        </tr>
+        <tr>
+          <th scope="row">Birth Date</th>
+          <td>10/01/1985</td>
+        </tr>
+        <tr>
+          <th scope="row">Address</th>
+          <td>Slatyne, Traktorniy lane, 7</td>
+        </tr>
+        <tr>
+          <th scope="row">E-mail</th>
+          <td>send.olena@gmail.com</td>
+        </tr>
+        <tr>
+          <th scope="row">Skype</th>
+          <td>olenka.vakulenko</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <table class="table">
+      <caption>Perfirmance</caption>
+      <thead>
+        <tr>
+          <th>Course</th>
+          <th>Week</th>
+          <th>Control type</th>
+          <th>Grade</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">PY101 Introduction to Python</th>
+          <td>Week 1</td>
+          <td>Tests</td>
+          <td>100%</td>
+        </tr>
+        <tr>
+          <th scope="row"></th>
+          <td></td>
+          <td>Priblem Task #1</td>
+          <td>100%</td>
+        </tr>
+        <tr>
+          <th scope="row"></th>
+          <td></td>
+          <td>Problem Task #2</td>
+          <td>100%</td>
+        </tr>       
+      </tbody>
+    </table>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
