--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">Main</a></li>
         <li><a href="contact.html" >Contacts</a></li>
+        <li><a href="student_list.html" >Students</a></li>
         
         </li>
       </ul>
