--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Main</title>
+    <title>Student</title>
 
     <link href="../static/css/bootstrap.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
@@ -100,9 +100,9 @@
 		</div>
 	<!-- Default panel contents -->
 		<!-- Table -->
-		<table class="table ">
-			<thead>
-				<tr class = "style-thead">
+		<table class="table">
+			<thead class="style-thead">
+				<tr>
 				
 					<th>Course</th>
 					<th>Week</th>
