--- a/templates/contact.html
+++ b/templates/contact.html
@@ -43,6 +43,15 @@
 					   <span class="phone">Phone: 1111</span>
 	  </p>
       <p>Not finished - yes</p>
-
+	  	<p class="alert">Здесь нужен bootstrap</p>
+	<p class="alert-dismissable">Еще немного bootstrap</p>
+	<p class="alert-dismissible">Еще немного bootstrap</p>
+	<p class="alert-success">Еще немного bootstrap</p>
+	<p class="alert-info">Еще немного bootstrap</p>
+	<p class="alert-warning">Еще немного bootstrap</p>
+	<p class="alert-danger">Еще немного bootstrap</p>
+	<p class="progress">Еще немного bootstrap</p>
+	<p class="jumbotron">Еще немного bootstrap</p>
+	<p class="breadcrumb">Еще немного bootstrap</p>
     </div>
   </body>
